@@ -282,6 +282,11 @@ void parse_syntax(char *ptr)
 
     assert(ptr != NULL);
 
+    if (endsyntax != NULL && endcolor == NULL) {
+	rcfile_error(N_("Previous syntax has no color commands"));
+	return;
+    }
+
     if (*ptr == '\0') {
 	rcfile_error(N_("Missing syntax name"));
 	return;
